test/samples/valid/simplePrint.ygl
node Foo {
    out {
        int a = 42;
    }
}

node Print0 : Print;
Foo.out.a -> Print0.in.text;
,42