test/samples/invalid/processInNodeInput.ygl
node Foo {
    in {
        int result;
        process {
                out.result = 2 - 2;
        }
    }

}